@@ -54,6 +54,7 @@
        <file>icons/16x16/delete.png</file>
        <file>icons/16x16/edit.png</file>
        <file>icons/16x16/gnome.png</file>
+       <file>icons/16x16/unity.png</file>
        <file>icons/16x16/kde.png</file>
        <file>icons/16x16/new_file.png</file>
        <file>icons/16x16/resolution.png</file>
