@@ -24,6 +24,10 @@ x2goclient (3.99.2.1-0~x2go1) UNRELEASED; urgency=low
   * New upstream version (3.99.2.1):
     - German i18n update for published applications.
 
+  [ Mike Gabriel ]
+  * New upstream version (3.99.2.1):
+    - Add Ubuntu-2d (Unity) support to X2Go Client.
+
  -- Oleksandr Shneyder <oleksandr.shneyder@obviously-nice.de>  Mon, 16 Apr 2012 13:15:47 +0200
 
 x2goclient (3.99.2.0-0~x2go1) unstable; urgency=low
